--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,5 +18,5 @@ jobs:
         python-version: "3.10"
         architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
     - name: Execute test Python  
-    - run: python execute_bigquery/teste.py
+      run: python execute_bigquery/teste.py
 
